Finish setting up files needed

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,19 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header class="header__container">
+    <!-- <nav>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav> -->
+  </header>
+  <main class="main__container">
+    <div class="contents">
+
+    </div>
+  </main>
 </body>
 </html>
