Added html strucure for the header and other things

--- a/src/index.html
+++ b/src/index.html
@@ -7,17 +7,22 @@
 </head>
 <body>
   <header class="header__container">
-    <!-- <nav>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-    </nav> -->
+   <div class="sub__header">
+      <nav class="header">
+        <ul class="nav__links">
+          <li>Home</li>
+          <li>Menu</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+      <div class="logo__container">
+        <h3 class="logo__text">Pizza<span class="era__text"> era.</span><h1/>
+      </div>
+   </div>
   </header>
   <main class="main__container">
-    <div class="contents">
-
+    <div id="contents">
+      
     </div>
   </main>
 </body>
